@startuml ER-Diagram für die SQLite Datenbank

enum TaskStatus {
  queued
  done
  failed
  running
  canceled
}

class UploadTask {
  ID: UUID
  startDate: Date
  endDate?: Date
  errorMsg?: String
  identifier*: String
  task_status: TaskStatus
}

class TrainingTask {
  ID: UUID
  startDate: Date
  endDate?: Date
  errorMsg?: String
  model: ModelID
  task_status: TaskStatus
  datasets: Dataset[]
}

class EvaluationTask {
  ID: UUID
  startDate: Date
  endDate?: Date
  errorMsg?: String
  model: ModelID
  task_status: TaskStatus
  datasets: Dataset[]
}

class Model {
  ID: UUID
  tag: String @unique
  createdAt: Date
  updatedAt: Date
  name: String
  counter: Int
}

class Dataset {
  ID: UUID
  name: String @unique
  createdAt: Date
  updatedAt: Date
  synthesis_task?: SynthesisID
}

class SynthesisTask {
  ID: UUID
  startDate: Date
  endDate?: Date
  errorMsg?: String
  task_status: TaskStatus
}

Model "1" -- "0..*" Training : trains
Model "1" -- "0..*" Evaluation : evaluated by

Training "0..*" -- "0..*" Dataset : uses
Evaluation "0..*" -- "0..*" Dataset : uses

Dataset "0..1" -- "1" SynthesisTask : generated by

@enduml
